Added github pages

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "react-os",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://priyanshuchauhan.github.io/react-os",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-scripts": "2.1.1"
